--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -1272,4 +1272,11 @@ div {
     background-position: 50% 50%;
 }
 
-
+#sli-child1{
+    background-image: url(../images/landingPage/slideshow/IMG_0739.JPG);
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;   
+    width:100%;
+    height: 100%;
+}
