--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -570,6 +570,18 @@ a {
         opacity: 1;
     }
 }
+.fade-out{
+    animation: fadeOut 3.5s linear ;
+    text-shadow: 1px 1px 1px grey;
+}
+@keyframes fadeOut {
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
 
 /*-------------------- HEADING ANIMATION --------------------*/
 
@@ -1280,3 +1292,28 @@ div {
     width:100%;
     height: 100%;
 }
+#sli-child2{
+    background-image: url(../images/landingPage/slideshow/IMG_0381.JPG);
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;   
+    width:100%;
+    height: 100%;
+}
+#sli-child3{
+    background-image: url(../images/landingPage/slideshow/8_1.jpg);
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;   
+    width:100%;
+    height: 100%;
+}
+#sli-child4{
+    background-image: url(../images/landingPage/slideshow/2.jpg);
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;   
+    width:100%;
+    height: 100%;
+}
+
