--- a/DecodeCollective/styles/projectSpecific.css
+++ b/DecodeCollective/styles/projectSpecific.css
@@ -173,8 +173,8 @@
 }
 
 #gi-full-image2{
-    background-image: url(../images/geospatialInfographics/axodata1.png);
-    background-size: cover;
+    background-image: url(../images/geospatialInfographics/mapspurple.jpg);
+    background-size: contain;
     background-position: center;   
     background-repeat: no-repeat;  
 }
