--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -261,6 +261,11 @@ hr{
        display: flex;
        justify-content: center;
    }
+   .full-grid-no-flex{
+    grid-row: -1/1;
+    grid-column: -1/1;
+    
+}
    /*---unique characteristics of each section--- */
 
    .second-wrapper{
@@ -1197,10 +1202,10 @@ div {
 }
 /*---------------------------- VIDEO EFFECTS ----------------------------*/
 .opacity{
-    opacity: 0.5;
+    opacity: 1;
 }
 .opacity1{
-    opacity:0.75;
+    opacity:0.90;
 }
 
 .vr-video{    
@@ -1284,36 +1289,46 @@ div {
     background-position: 50% 50%;
 }
 
+#about-photo{
+    background-image: url(../images/landingPage/about_pic.png);
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;   
+    width:100%;
+    height: 100%;
+    
+}
+
+#slideshow{
+    position: relative;
+}
+
+.slide{
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;   
+    width:100%;
+    height: 100%;
+    position: absolute;
+}
+
 #sli-child1{
-    background-image: url(../images/landingPage/slideshow/IMG_0739.JPG);
-    background-size: cover;
-    background-position: center;   
-    background-repeat: no-repeat;   
-    width:100%;
-    height: 100%;
-}
+    background-image: url(../images/landingPage/slideshow/sl1.JPG);
+    }
 #sli-child2{
-    background-image: url(../images/landingPage/slideshow/IMG_0381.JPG);
-    background-size: cover;
-    background-position: center;   
-    background-repeat: no-repeat;   
-    width:100%;
-    height: 100%;
-}
+    background-image: url(../images/landingPage/slideshow/sl2.JPG);
+  }
 #sli-child3{
-    background-image: url(../images/landingPage/slideshow/8_1.jpg);
-    background-size: cover;
-    background-position: center;   
-    background-repeat: no-repeat;   
-    width:100%;
-    height: 100%;
-}
+    background-image: url(../images/landingPage/slideshow/sl3.png);
+ }
 #sli-child4{
-    background-image: url(../images/landingPage/slideshow/2.jpg);
-    background-size: cover;
-    background-position: center;   
-    background-repeat: no-repeat;   
-    width:100%;
-    height: 100%;
+    background-image: url(../images/landingPage/slideshow/sl4.png);
 }
+#sli-child5{
+    background-image: url(../images/landingPage/slideshow/sl5.jpg);
+}
+#sli-child6{
+    background-image: url(../images/landingPage/slideshow/sl6.png);
+}
+
 
