--- a/DecodeCollective/styles/projectSpecific.css
+++ b/DecodeCollective/styles/projectSpecific.css
@@ -114,6 +114,13 @@
     
 }
 #ug-full-image1{
+    background-image: url(../images/urbanGrowth/layout1.png);
+    background-size: contain;
+    background-position: center;   
+    background-repeat: no-repeat;  
+    
+}
+#ug-full-image2{
     background-image: url(../images/urbanGrowth/falcon.png);
     background-size: cover;
     background-position: center;   
@@ -185,3 +192,115 @@
     background-position: center;   
     background-repeat: no-repeat;  
 }
+
+/* ---- Rawbot ---- */
+#ra-wallpaper{
+    background-image: url(../images/rawbot/20180901_Render5.jpg);
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;
+}
+
+#ra-grid{
+    background-image: url(../images/rawbot/DSCF7856.JPG);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;
+}
+#ra-grid1{
+    background-image: url(../images/rawbot/DSCF7849.JPG);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;
+}
+#ra-grid2{
+    background-image: url(../images/rawbot/DSCF7856.JPG);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;
+}
+#ra-grid3{
+    background-image: url(../images/rawbot/untitled.1273.png);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;
+}
+
+#ra-full-image1{
+    background-image: url(../images/rawbot/20180313_AR-03.jpg);
+    background-size: cover;
+    background-position: bottom;   
+    background-repeat: no-repeat;  
+}
+
+#ra-full-image2{
+    background-image: url(../images/rawbot/20180901_Render2.jpg);
+    background-size: contain;
+    background-position: center;   
+    background-repeat: no-repeat; 
+     
+}
+
+#ra-full-image3{
+    background-image: url(../images/rawbot/IMG_94991.jpg);
+    background-size: contain;
+    background-position: center;   
+    background-repeat: no-repeat; 
+    background-color: white;
+}
+
+
+#ra-full-image{
+    background-image: url(../images/rawbot/wholeStructure.1367.png);
+    background-size: contain;
+    background-position: center;   
+    background-repeat: no-repeat;  
+}
+#ra-full-image4{
+    background-image: url(../images/rawbot/20180829_Render.jpg);
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;  
+}
+
+#ra-grid4{
+    background-image: url(../images/rawbot/untitled.1430.png);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;
+}
+#ra-grid5{
+    background-image: url(../images/rawbot/untitled.1433.png);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;
+}
+#ra-grid6{
+    background-image: url(../images/rawbot/untitled.1437.png);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;
+}
+#ra-grid7{
+    background-image: url(../images/rawbot/untitled.1443.png);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;
+}
+
