--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -338,6 +338,7 @@ hr{
     display: flex;
     justify-content: center;
     overflow: hidden;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.20);
  }
 
 .contact-container {
