--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -404,6 +404,7 @@ a {
     /* margin: 0; */
     color: var(--text-colour);
     font-weight: 100;
+    text-decoration: none
 }
 
 .overlay{
@@ -1294,6 +1295,8 @@ div {
     margin-right: 5px;
 }
 
+
+
 /* ----- Project Wallpaper Images ---- */
 #perceptiveDatascapes-project-img {
     /* background-size: cover;
@@ -1324,6 +1327,12 @@ div {
     background: rgba(66, 66, 66, 0.5) url(../images/geospatialInfographics/visualField.png) repeat fixed;
     background-position: 50% 50%;
     background-size: contain;
+}
+
+.next-project-gi{
+    background: rgba(66, 66, 66, 0.5) url(../images/geospatialInfographics/visualField.png) no-repeat;
+    background-position: 50% 100%;
+    background-size: cover;
 }
 
 #rawbot-project-img {
