--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -1292,6 +1292,11 @@ div {
     overflow: hidden;
 }
 
+.contained-video{
+    background-size: contain;
+    object-fit: contain;
+}
+
 
 /*---------------------------- IMAGES ----------------------------*/
 .small-icon {
