--- a/DecodeCollective/styles/projectSpecific.css
+++ b/DecodeCollective/styles/projectSpecific.css
@@ -236,7 +236,7 @@
 
 #ra-full-image1{
     background-image: url(../images/rawbot/20180313_AR-03.jpg);
-    background-size: cover;
+    background-size: contain;
     background-position: bottom;   
     background-repeat: no-repeat;  
 }
@@ -304,3 +304,20 @@
     background-repeat: no-repeat;
 }
 
+#ra-grid8{
+    background-image: url(../images/rawbot/ml1.png);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;
+}
+
+#ra-grid9{
+    background-image: url(../images/rawbot/ml2.png);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;
+}
