--- a/DecodeCollective/styles/projectSpecific.css
+++ b/DecodeCollective/styles/projectSpecific.css
@@ -237,7 +237,7 @@
 #ra-full-image1{
     background-image: url(../images/rawbot/20180313_AR-03.jpg);
     background-size: contain;
-    background-position: bottom;   
+    background-position: center;   
     background-repeat: no-repeat;  
 }
 
