about page not interactable

--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -152,6 +152,11 @@ p>a{
     text-decoration: none;
 }
 
+.inactiveLink {
+    pointer-events: none;
+    cursor: default;
+    color: rgb(88, 88, 88);
+ }
 
 /* ----------------- Divider--------- */
 hr{
