--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -1493,7 +1493,7 @@ div {
     background-image: url(../images/landingPage/slideshow/sl1.JPG);
     }
 #sli-child2{
-    background-image: url(../images/landingPage/slideshow/sl2.JPG);
+    background-image: url(../images/landingPage/slideshow/sl2.jpg);
   }
 #sli-child3{
     background-image: url(../images/landingPage/slideshow/sl3.png);
