--- a/DecodeCollective/styles/projectSpecific.css
+++ b/DecodeCollective/styles/projectSpecific.css
@@ -324,13 +324,13 @@
 
 /* ---- Swapper ---- */
 #sw-wallpaper{
-    background-image: url(../images/swapper/);
+    background-image: url(../images/Swapper/Screenshot3.png);
     background-size: cover;
-    background-position: center;   
+    background-position: bottom;   
     background-repeat: no-repeat;
 }
 #sw-grid{
-    background-image: url(../images/swapper/);
+    background-image: url(../images/Swapper/Screenshot2.png);
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -338,7 +338,7 @@
     background-repeat: no-repeat;
 }
 #sw-grid1{
-    background-image: url(../images/swapper/);
+    background-image: url(../images/Swapper/Screenshot4.png);
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -346,7 +346,7 @@
     background-repeat: no-repeat;
 }
 #sw-grid2{
-    background-image: url(../images/swapper/);
+    background-image: url(../images/Swapper/Screenshot6.png);
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -354,7 +354,7 @@
     background-repeat: no-repeat;
 }
 #sw-grid3{
-    background-image: url(../images/swapper/);
+    background-image: url(../images/Swapper/Screenshot7.png);
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -376,14 +376,21 @@
     
 }
 #sw-full-image1{
-    background-image: url(../images/Swapper/map_tab.png);
-    background-size: contain;
+    background-image: url(../images/Swapper/Screenshot5.png);
+    background-size: cover;
     background-position: center;   
     background-repeat: no-repeat;  
     
 }
 #sw-full-image2{
     background-image: url(../images/Swapper/Screenshot.png);
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;  
+    
+}
+#sw-full-image3{
+    background-image: url(../images/Swapper/Screenshot8.png);
     background-size: cover;
     background-position: center;   
     background-repeat: no-repeat;  
