--- a/DecodeCollective/styles/projects.css
+++ b/DecodeCollective/styles/projects.css
@@ -1,7 +1,7 @@
 :root {
     --background-colour: rgb(255, 255, 255);
-    /* --background-colour: rgb(25, 27, 27); */
-    --highlight-colour: gray;
+    --background-colour-dark: rgb(25, 27, 27);
+    --highlight-colour: rgb(177, 177, 177);
     --section-background: #f2f2f2;
     --creation-colour: yellow;
     --modification-colour: lightgray;
@@ -146,7 +146,7 @@ p > a {
     text-decoration: none;
 }
 
-a{
+a {
     font-family: var(--font-family-description);
     font-size: normal;
     font-weight: 200;
@@ -174,8 +174,14 @@ a{
     height: 5vh;
     background-color: white;
 }
-
-
+.projects-container {
+    width: 100vw;
+    margin-top: 15vh;
+    display: flex;
+    justify-content: center;
+    padding: 0 10% 10% 10%;
+    
+}
 /*-------------------- NAVIGATION MENU --------------------*/
 
 #siteNav ul {
@@ -210,7 +216,6 @@ a{
     border-bottom: thin;
 }
 
-
 .navbar {
     position: fixed;
     top: 20px;
@@ -218,6 +223,7 @@ a{
     display: flex;
     justify-content: space-between;
     z-index: 3;
+    padding: 0 6vw;
 }
 .logo {
     width: 5vw;
@@ -239,21 +245,83 @@ a{
 }
 .menu {
     display: flex;
-    align-items: center;
-}
-.menu ul {
-    display: flex;
+    /* align-items: center; */
+    overflow: hidden;
+    /* flex-grow: 1; */
     justify-content: flex-end;
-    align-items: center;
-    list-style: none;
-    margin-right: 40px;
 }
+
 .menu a {
     margin: 0 20px;
-    padding: 0 10px;   
+    padding: 0 10px;
+    float: left;
+    display: block;
+    color: var(--colour-link);
+    text-align: center;
+    text-decoration: none;
+    font-size: 17px;
 }
-.nav-text {
-    color: white !important;
+
+.menu a:hover {
+    color: var(--color-link-hover);
+}
+
+.menu a.active {
+    text-decoration: underline;
+}
+
+.menu .icon {
+    display: none;
+    margin:0;
+}
+
+@media screen and (max-width: 600px) {
+  
+    .menu a {
+        display: none;
+    }
+    .menu a.icon {
+        float: right;
+        display: flex;
+        /* background-color: var(--highlight-colour); */
+        width: 2rem;
+        height: 2rem;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .projects-container{
+        margin-top:11vh
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .menu.responsive {
+        position: relative;
+        flex-direction: column;        
+        padding: 0 3rem 0 0;
+        background-color: whitesmoke;
+    }
+    .menu.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 2rem;
+        height: 2rem;
+    }
+    .menu.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+        height: auto;        
+        margin:0;
+    }
+    .menu.responsive a:not(:last-child){
+        margin-top: 0.5rem;
+    }
+    .menu.responsive a:first-child{
+        margin-top: 2rem;
+    }
 }
 
 /*-------------------- SCROLLBAR --------------------*/
@@ -290,7 +358,6 @@ div {
 
 /* GRID OF IMAGES */
 
-
 /* direction aware :hover */
 
 *,
@@ -311,23 +378,23 @@ img {
     object-fit: cover;
 }
 
-.grid{
+.grid {
     display: flex;
     flex-flow: row wrap;
-    max-width: 80em;
+    max-width: 90em;
     width: 100vw;
     padding: 0;
     margin: 0;
     height: fit-content;
 }
 
-.grid li{    
-    flex: 1 1 20vw;
-    list-style-type: none;
+.grid li {
+    flex: 1 1 22vw;
+    list-style-type: none;    
     min-width: 20em;
     min-height: 10em;
-    max-width: 450px;
-    max-height: 225px;;
+    max-width: 500px;
+    max-height: 290px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -346,27 +413,24 @@ img {
     position: absolute;
     width: 20%;
     height: 20%;
-    
+
     pointer-events: none;
-    opacity: 0;    
+    opacity: 0;
 }
 
 .grid li:last-child:after {
     mix-blend-mode: multiply;
-    
 }
 
-.hovered-project{
-    mix-blend-mode: multiply;    
+.hovered-project {
+    mix-blend-mode: multiply;
     position: absolute;
     z-index: 2;
-    top:0;
-    width:100px;
-    height: 100px;
+    top: 0;
     padding: 2%;
-    transition: opacity 1s, transform 1s 1s, background 1s, top 2s , left 2s;
+    transition: opacity 1s, transform 1s 1s, background 1s, top 2s, left 2s;
 }
-.polygon-background{
+.polygon-background {
     background: #1a237e;
     width: 100%;
     height: 100%;
@@ -381,7 +445,7 @@ li .project-title {
     text-align: center;
     top: -50%;
     left: 0;
-    width: 60px;
+    width: auto;
     margin: auto;
     color: white;
     z-index: 100;
@@ -390,6 +454,6 @@ li .project-title {
     transition: 0.3s 0s;
 }
 
-li:hover .project-title {   
+li:hover .project-title {
     transition: 0.6s 0.3s;
 }
